--- a/MythBots/.gitignore
+++ b/MythBots/.gitignore
@@ -1,5 +1,8 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+
+/api/node_modules
+/api/.env
 # Compiled output
 /dist
 /tmp
